<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidRestFulWSExample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="btnRegister">Register</string>
    <string name="all_user_title"><u>All Users</u></string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="wecm_text">Welcome</string>
    <string name="add">Add</string>
    <string name="comments">Comments:</string>
    <string name="add_comment">Add comment.</string>
    <string name="enter_comment">Enter comment.</string>
    <string name="check">Check</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_email_id">Enter your Email ID</string>
    <string name="enter_as_anonymous">Enter As Anonymous</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="nothing_added_to_wishlist">Nothing added to WishList</string>
</resources>