<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/map_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/map_toolbar"
        android:layout_marginTop="0dp"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <fragment
                    android:id="@+id/autocomplete_fragment"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <fragment
                    android:id="@+id/map"
                    class="tk.uditsharma.clientapp.view.ScrollGoogleMap"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:tag="fragment_map" />
                <!--tools:context=".MapsActivity"-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="60dp"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/divider_gradient"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/selected_date_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/div"
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:layout_toEndOf="@id/selected_date_info"
                        android:background="@color/quantum_cyan50" />

                    <Button
                        android:id="@+id/update_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/div"
                        android:onClick="onClickAdd"
                        android:text="@string/add"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:theme="@style/AppTheme.Button" />
                </RelativeLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    tools:ignore="ContentDescription"
                    android:src="@color/quantum_grey"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/comments_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/commentBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:hint="@string/enter_comment"
                        android:importantForAutofill="no" />

                    <ImageButton
                        android:id="@+id/add_comment"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/add_comment"
                        android:onClick="onClickComment"
                        android:src="@drawable/mcv_action_next"
                        android:theme="@style/AppTheme.Button" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>